# divit

./: Cargo.toml  build.rs
backend/: Cargo.toml  build.rs
backend/src/: main.rs
backend/templates/: index.stpl
frontend/: Cargo.toml
frontend/src/: event_target_ex.rs  lib.rs
src/: main.rs
templates/: index.stpl
