[package]
name = "frontend"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlDivElement",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",
]